# FlexGPIO_Bootloader

./: CMakeLists.txt  README.md
examples/host_loader/: CMakeLists.txt  README.md  flexi_2350.h  main.c  rp2040_ram_loader.c  rp2040_ram_loader.h
examples/host_loader/tools/: embed_firmware.py
src/: main.c  picoboot3.c  picoboot3.h
tools/: generate_flexgpio_ram.py
